# user_clone

./: .gitignore  README.md  makeDb  schema.sql  stack.yaml  user-clone.cabal  user_clone.sample.conf
app/: Main.hs  Types.hs
src/: Main.hs  Seeds.hs  UserService.hs
src/UserService/: API.hs  Client.hs  Database.hs  Server.hs  Types.hs
