name:                user-clone
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/tippenein/user-clone
license:             BSD3
license-file:        LICENSE
author:              tippenein
maintainer:          tippenein@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable user_clone
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , user-clone
    , servant >= 0.4
    , servant-client >= 0.4
    , servant-server >= 0.4
    , either
    , transformers
    , aeson
    , time
    , warp
    , wai
  default-language:    Haskell2010

test-suite user-clone-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , servant == 0.5.*
    , servant-client == 0.5.*
    , servant-server == 0.5.*
                     , new-template
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tippenein/user-clone
