name:                user-clone
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/tippenein/user-clone
license:             BSD3
license-file:        LICENSE
author:              tippenein
maintainer:          tippenein@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/tippenein/user-clone

library
  hs-source-dirs:      src
  exposed-modules:
      UserService
    , UserService.API
    , UserService.Server
    , UserService.Database
    , UserService.Client
    , UserService.Types
  other-modules: Seeds
  build-depends:
      base
    , servant >= 0.4
    , servant-client >= 0.4
    , servant-server >= 0.4
    , either
    , transformers
    , aeson
    , text
    , time
    , warp
    , wai
    , wai-extra
    , postgresql-simple
  default-language:    Haskell2010

executable user_clone
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , user-clone
    , servant >= 0.4
    , servant-client >= 0.4
    , servant-server >= 0.4
    , either
    , transformers
    , aeson
    , text
    , time
    , warp
    , wai
    , wai-extra
    , persistent
    , persistent-template
    , persistent-sqlite
  default-language:    Haskell2010

test-suite user-clone-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , servant == 0.5.*
    , servant-client == 0.5.*
    , servant-server == 0.5.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

